--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
     "joi": "^18.0.2",
-    "mongoose": "^9.0.0",
+    "pg": "^8.16.3",
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.28"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
