--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.7",
     "joi": "^18.0.2",
     "pg": "^8.16.3",
+    "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
