--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # compiled output
 /dist
 /node_modules
@@ -41,6 +43,7 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+google-credentials.json
 
 # temp directory
 .temp
