--- a/package.json
+++ b/package.json
@@ -27,22 +27,27 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.9",
     "@repo/shared": "workspace:*",
     "@types/passport-google-oauth20": "^2.0.17",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
+    "generate-password-ts": "^1.6.5",
     "google-auth-library": "^10.5.0",
     "googleapis": "^168.0.0",
     "joi": "^18.0.2",
+    "kafkajs": "^2.2.4",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
