--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "unique-username-generator": "^1.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
