--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "@app/common/*": [
         "libs/common/src/*"
       ],
-      "@repo/shared" :["../../packages/shared/src/index.ts"]
+      "@repo/shared" :["../../packages/shared/src/index.ts"],
+      "@repo/shared/*": ["../../packages/shared/src/*"]
     }
   }
 }
